<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUser">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:src="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextName.Bigger"
        android:text="@string/nama_lengkap"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_profile"
        app:layout_constraintTop_toTopOf="@+id/img_profile"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/WrapContent"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintHorizontal_bias="0.0" />
    <TextView
        android:id="@+id/tv_following"
        style="@style/WrapContent.SmallMarginTop"
        android:text="@string/txt_following"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_username"/>
    <TextView
        android:id="@+id/tv_follower"
        style="@style/WrapContent.SmallMarginTop"
        android:text="@string/txt_follower"
        app:layout_constraintStart_toStartOf="@id/tv_following"
        app:layout_constraintTop_toBottomOf="@id/tv_following"/>

    <TextView
        android:id="@+id/tv_repository"
        style="@style/WrapContent.SmallMarginTop"
        android:text="@string/txt_repository"
        app:layout_constraintStart_toStartOf="@id/tv_follower"
        app:layout_constraintTop_toBottomOf="@id/tv_follower"/>
    <ImageView
        android:id="@+id/icon_work"
        style="@style/WrapContent"
        android:src="@drawable/ic_baseline_work_outline_24"
        android:contentDescription="@string/txt_work"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/img_profile"
        app:layout_constraintTop_toBottomOf="@id/img_profile"/>
    <TextView
        android:id="@id/tv_company"
        style="@style/WrapContent"
        android:text="@string/txt_company"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/icon_work"
        app:layout_constraintTop_toBottomOf="@id/icon_work"
        app:layout_constraintStart_toEndOf="@id/icon_work"/>
    <ImageView
        android:id="@+id/icon_home"
        style="@style/WrapContent"
        android:src="@drawable/ic_baseline_home_24"
        android:contentDescription="@string/txt_home"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/icon_work"
        app:layout_constraintTop_toBottomOf="@id/icon_work"
        app:layout_constraintStart_toEndOf="@id/icon_work"/>
    <TextView
        android:id="@+id/tv_location"
        style="@style/WrapContent"
        android:text="@string/txt_location"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/icon_home"
        app:layout_constraintTop_toTopOf="@id/icon_home"
        app:layout_constraintBottom_toBottomOf="@id/icon_home"/>


</androidx.constraintlayout.widget.ConstraintLayout>