<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_name"
            style="@style/TextName"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:text="@string/nama_lengkap"
            app:layout_constraintStart_toEndOf="@id/img_profile"
            app:layout_constraintTop_toTopOf="@id/img_profile"
            app:layout_constraintEnd_toEndOf="parent"
             />
        <TextView
            android:id="@+id/tv_username"
            style="@style/WrapContent.SmallMarginTop"
            android:text="@string/username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name"/>
        <TextView
            android:id="@+id/tv_company"
            style="@style/WrapContent.SmallMarginTop"
            android:text="@string/perusahaan"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_username"
            app:layout_constraintEnd_toEndOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@id/tv_username"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>